# pypuyo

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
pyyo/: pyyo.py
src/pypuyo/: __init__.py  pypuyo.py
src/pyyo/: __init__.py
